<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">welcome to my app</string>
    <string name="app_name">mynote</string>
    <string name="strInputAccHint">请输入邮箱名</string>
    <string name="strInputPwdHint"></string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="opt_remember">记住密码</string>
    <string name="find_pwd_back">找回密码</string>
    <string name="register_new_acc">注册账号</string>
    <string name="login">登 录</string>
    <string name="feedbackLabel">意见反馈</string>
    <string name="aboutUsLabel">    本软件创意来自cly-team团队.成员组成：李保坤、陈二亮、岳晨旭.版权归三人所有~如有雷同，这个纯属巧合.呵呵呵呵呵~~~~~~</string>
    <string name="back">返回</string>
    <string name="feedbackcommit">反馈</string>
    <string name="title">标题</string>
    <string name="commit">确定</string>
    <string name="feedbackcontent">反馈内容</string>
    <string name="feedbackthank">感谢对我们软件的支持，您的建议我们会及时采纳~~~~</string>
    <string name="main_tilte">mynote</string>
    <string name="registercommit">注册</string>
    <string name="usernamelabel">用户登陆</string>
    
    <string name="list_name">列表名称</string>
    <string name="add_list_label">添加列表</string>
    <string name="add_list_warn">创建列表的长度不超过10个汉字</string>
    
    
    
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    
	<!--     menu菜单           -->
    <string name="ago">很久以前</string>
    <string name="yesterday">昨天</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="future">以后</string>
    <string name="more">更多.....</string>
</resources>
