<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/feedback_bg"
    >
    <RelativeLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="45dip"
	    android:background="@drawable/title_bar_bg">
	    <Button
		    android:id="@+id/feedback_back_btn"
			android:layout_width="40dip"
			android:layout_height="24dip"
			android:background="@drawable/back_bg"
			android:layout_marginLeft="5dip"
			android:layout_centerVertical="true"
			android:text="@string/back">
	    </Button>
	    <TextView  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/feedbackLabel"
		    android:layout_centerInParent="true"
		    android:textColor="#33333333"
		    android:textSize="18dip"
		    android:layout_centerVertical="true"
		    />
	    <Button
		    android:id="@+id/feedback_commit_btn"
			android:layout_width="40dip"
			android:layout_height="24dip"
			android:background="@drawable/commit_bg"
			android:layout_marginRight="5dip"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:text="@string/feedbackcommit">
		</Button>
    </RelativeLayout>
    <LinearLayout
    	android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    <EditText
	    	android:id="@+id/feedback_title"
		    android:maxLines="1"
		    android:hint="@string/title"
		    android:layout_width="fill_parent" 
			android:layout_height="wrap_content" >
		</EditText>
		<EditText
			android:id="@+id/feedback_content"
		    android:hint="@string/feedbackcontent"
		    android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:minLines="16"
			android:maxLines="20"
			android:layout_marginBottom="30dip"
			android:layout_marginTop="5dip">
		</EditText>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:text="@string/feedbackthank"
			android:textColor="#33333333"
			android:textSize="10dip"
		>
		</TextView>
	</LinearLayout>
</LinearLayout>
