<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/feedback_bg"
    >
    <RelativeLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="47dip"
	    android:background="@drawable/title_bar_bg">
	    <Button
		    android:id="@+id/add_list_back_btn"
			android:layout_width="40dip"
			android:layout_height="24dip"
			android:background="@drawable/back_bg"
			android:layout_marginLeft="5dip"
			android:layout_centerVertical="true"
			android:text="@string/back">
	    </Button>
	    <TextView  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/add_list_label"
		    android:layout_centerInParent="true"
		    android:textColor="#33000000"
		    android:textSize="18dip"
		    android:layout_centerVertical="true"
		    />
	    <Button
		    android:id="@+id/add_list_commit_btn"
			android:layout_width="40dip"
			android:layout_height="24dip"
			android:background="@drawable/commit_bg"
			android:layout_marginRight="5dip"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:text="@string/commit">
		</Button>
    </RelativeLayout>
    <LinearLayout
    	android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    <EditText
	    	android:id="@+id/add_new_list_name"
		    android:maxLines="1"
		    android:maxLength="20"
		    android:hint="@string/list_name"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
		    android:layout_marginTop="10dip">
		</EditText>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:text="@string/add_list_warn"
			android:textColor="#33333333"
			android:textSize="10dip"
		>
		</TextView>
	</LinearLayout>
</LinearLayout>
