<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:id="@+id/loginRoot"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout android:orientation="vertical" android:id="@+id/LinearLayout01"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_weight="1.0"
		android:background="@drawable/default_bg">
		<RelativeLayout android:id="@+id/RelativeLayout02"
			android:background="@drawable/login_back" android:paddingTop="21.0px"
			android:paddingBottom="10.0px" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginLeft="15.0px"
			android:layout_marginTop="102.0px" android:layout_marginRight="15.0px">
			<ImageView android:id="@+id/faceImg" android:background="@drawable/login_head"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
			<EditText android:id="@+id/login_edit_account"
				android:background="@drawable/mynote_edit_login" android:paddingLeft="45.0sp"
				android:saveEnabled="true" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_marginLeft="5.0dip"
				android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip"
				android:layout_marginBottom="5.0px" android:hint="@string/strInputAccHint"
				android:maxLength="10" android:layout_toRightOf="@+id/faceImg"
				android:layout_alignParentTop="true" android:inputType="number" />
			<TextView android:textSize="16.0dip" android:textColor="#ff3f3f3f"
				android:gravity="center_vertical" android:id="@+id/TextView01"
				android:paddingLeft="7.0sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="15.0sp"
				android:text="@string/strAccInputLabel" android:layout_alignLeft="@+id/login_edit_account"
				android:layout_alignTop="@+id/login_edit_account"
				android:layout_alignBottom="@+id/login_edit_account" />
			<EditText android:id="@+id/login_edit_pwd"
				android:background="@drawable/mynote_edit_login" android:paddingLeft="45.0sp"
				android:saveEnabled="true" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="1.0dip"
				android:maxLength="16" android:layout_below="@+id/login_edit_account"
				android:text="@string/strInputPwdHint"
				android:layout_alignLeft="@+id/login_edit_account"
				android:layout_alignRight="@+id/login_edit_account"
				android:inputType="textPassword" />
			<TextView android:textSize="16.0dip" android:textColor="#ff3f3f3f"
				android:gravity="center_vertical" android:id="@+id/TextView02"
				android:paddingLeft="7.0sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/strPswInputLabel"
				android:layout_alignTop="@+id/login_edit_pwd"
				android:layout_alignRight="@+id/TextView01"
				android:layout_alignBottom="@+id/login_edit_pwd" />
			<CheckBox android:textSize="16.0sp" android:textColor="#ff222222"
				android:id="@+id/login_cb_savepwd" android:paddingLeft="25.0px"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:checked="true" android:button="@drawable/mynote_btn_check"
				android:text="@string/opt_remember" android:layout_alignBaseline="@+id/login_btn_login" />
			<Button android:id="@+id/login_btn_login" android:layout_width="130.0px"
				android:layout_height="42.0px" android:layout_marginTop="7.0px"
				android:layout_marginRight="12.0dip" android:text="@string/login"
				android:layout_below="@+id/TextView02"
				android:layout_alignParentRight="true" />
		</RelativeLayout>
			<LinearLayout
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<RelativeLayout
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
					<TextView
						android:id="@+id/register_new_acc_id"
						android:text="@string/register_new_acc"
						android:textColor="#ffffffff"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="35dip"
						android:clickable="true"
						>
					</TextView>
					<TextView
						android:id="@+id/find_pwd_back_id"
						android:text="@string/find_pwd_back"
						android:textColor="#ffffffff"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentRight="true"
						android:layout_marginRight="35dip"
						android:clickable="true"
						>
					</TextView>
				</RelativeLayout>
			</LinearLayout>
	</LinearLayout>
	<RelativeLayout android:id="@+id/RelativeLayout01"
		android:background="@drawable/bottom" android:layout_width="fill_parent"
		android:layout_height="44.0dip">
		<ImageButton android:id="@+id/login_option"
			android:background="@drawable/option" android:clickable="true"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginLeft="13.0dip" android:layout_marginTop="2.0dip"
			android:layout_centerVertical="true" />
	</RelativeLayout>
</LinearLayout>